# RAG-FAQ-Star_Wars

./: .gitignore  LEARN.ipynb  README.md  app.py  config.yaml  links.txt  requirements.txt  setup_linux.sh  setup_windows.bat
projects/: config.yaml
projects/pbl_3-star_wars/: faq_with_embeddings.csv
rag_faq-0.1.0/: MANIFEST.in  rag_faq.tar  run_index.py  setup.cfg  setup.py
rag_faq-0.1.0/data/: dataset_sample.csv
rag_faq-0.1.0/projects/llm_test_project/: embeddings.npy  faq.csv  faq_with_embeddings.csv
rag_faq-0.1.0/projects/pbl_3-star_wars/: embeddings.npy  faq.csv
rag_faq-0.1.0/prompts/: persona.txt  response.txt  rules.txt
rag_faq-0.1.0/rag_faq/: __init__.py  config.py  embedder.py  generator.py  indexer.py  main.py  retriever.py  server.py  utils.py
web/: index.html  main.js  style.css
