[metadata]
name = rag-faq
version = 0.1.0
author = Seu Nome
description = RAG system with LLM-generated FAQs and retrieval-based answering
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    langchain
    langchain_community
    langchain_openai 
    openai
    sentence-transformers
    pandas
    numpy
    scikit-learn
    pyyaml
    tqdm
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    rag-faq=rag_faq.main:main
